// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`bodify should accept Headers 1`] = `
[
  "/api",
  {
    "body": "{}",
    "headers": {
      "a": "1, 2",
      "content-type": "application/json",
    },
  },
]
`;

exports[`bodify should allow custom content-type 1`] = `
[
  "/api",
  {
    "body": URLSearchParams: "",
    "headers": {
      "content-type": "application/vnd.org+form",
    },
  },
]
`;

exports[`bodify should allow custom content-type 2`] = `
[
  "/api",
  {
    "body": "{}",
    "headers": {
      "content-type": "application/vnd.org+json",
    },
  },
]
`;

exports[`bodify should not stringify with non-plain-object or non-array 1`] = `
[
  "/api",
  {
    "body": Foo {},
    "headers": {},
  },
]
`;

exports[`bodify should not stringify with non-plain-object or non-array 2`] = `
[
  "/api",
  {
    "body": FormData {},
    "headers": {},
  },
]
`;

exports[`bodify should not stringify with non-plain-object or non-array 3`] = `
[
  "/api",
  {
    "body": Map {},
    "headers": {},
  },
]
`;

exports[`bodify should not stringify with non-plain-object or non-array 4`] = `
[
  "/api",
  {
    "body": true,
    "headers": {},
  },
]
`;

exports[`bodify should not stringify with non-plain-object or non-array 5`] = `
[
  "/api",
  {
    "body": null,
    "headers": {},
  },
]
`;

exports[`bodify should stringify form 1`] = `
[
  "/api",
  {
    "body": URLSearchParams: "username=Jo+Jo&lang=%E4%B8%AD%E6%96%87&age=undefined",
    "headers": {
      "content-type": "application/x-www-form-urlencoded;charset=UTF-8",
    },
  },
]
`;

exports[`bodify should stringify form 2`] = `
[
  "/api",
  {
    "body": URLSearchParams: "1=2&3=4",
    "headers": {
      "content-type": "application/x-www-form-urlencoded;charset=UTF-8",
    },
  },
]
`;

exports[`bodify should stringify json 1`] = `
[
  "/api",
  {
    "body": "{"username":"Jo Jo","lang":"中文"}",
    "headers": {
      "content-type": "application/json",
    },
  },
]
`;

exports[`bodify should stringify json 2`] = `
[
  "/api",
  {
    "body": "[[1,2],[3,4]]",
    "headers": {
      "content-type": "application/json",
    },
  },
]
`;

exports[`bodify should stringify json 3`] = `
[
  "/api",
  {
    "body": "{}",
    "headers": {
      "content-type": "application/json",
    },
  },
]
`;

exports[`bodify should stringify json 4`] = `
[
  "/api",
  {
    "body": "{}",
    "headers": {
      "content-type": "application/json",
    },
  },
]
`;

exports[`bodify should stringify json 5`] = `
[
  "/api",
  {
    "body": {},
    "headers": {},
  },
]
`;

exports[`bodify should work without options 1`] = `
[
  "/api",
  {
    "body": undefined,
    "headers": {},
  },
]
`;
